<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.example</groupId>
  <artifactId>AnnaParfenova</artifactId>
  <version>1.0-SNAPSHOT</version>

  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <testng.version>7.4.0</testng.version>
    <assertj.version>3.21.0</assertj.version>
    <surefireplugin.versoin>3.0.0-M5</surefireplugin.versoin>
    <checkstyle.version>8.42</checkstyle.version>
    <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>

    <selenium.version>4.0.0</selenium.version>
    <webdrivermanager.version>5.0.3</webdrivermanager.version>

    <aspectj.version>1.9.5</aspectj.version>
    <allure.version>2.14.0</allure.version>

    <jdi.version>1.1.34</jdi.version>
    <json-simple.version>1.1.1</json-simple.version>
    <driver>chrome</driver>
    <domain>https://jdi-testing.github.io/jdi-light/</domain>

  </properties>

  <profiles>
    <profile>
      <id>sum-sub-test-suite</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <suiteXml>${project.basedir}/src/test/resources/com/epam/tc/hw1/SumSubTestSuite.xml</suiteXml>
      </properties>
    </profile>

    <profile>
      <id>multi-div-test-suite</id>
      <properties>
        <suiteXml>${project.basedir}/src/test/resources/com/epam/tc/hw1/MultiplyDivideTestSuite.xml</suiteXml>
      </properties>
    </profile>

    <profile>
      <id>sum-subtract-multiply-div-test-suite</id>
      <properties>
        <suiteXml>${project.basedir}/src/test/resources/com/epam/tc/hw1/SumSubMultiDivTestSuite.xml</suiteXml>
      </properties>
    </profile>

    <profile>
      <id>homework2-test-suite</id>
      <properties>
        <suiteXml>${project.basedir}/src/test/resources/com/epam/tc/hw2/Homework2TestSuite.xml</suiteXml>
      </properties>
    </profile>

    <profile>
      <id>homework3-test-suite</id>
      <properties>
        <suiteXml>${project.basedir}/src/test/resources/com/epam/tc/hw3/Homework3TestSuite.xml</suiteXml>
      </properties>
    </profile>

    <profile>
      <id>homework4-test-suite</id>
      <properties>
        <suiteXml>${project.basedir}/src/test/resources/com/epam/tc/hw4/Homework4TestSuite.xml</suiteXml>
      </properties>
    </profile>

    <profile>
      <id>homework7-test-suite</id>
      <properties>
        <suiteXml>${project.basedir}/src/test/resources/com/epam/tc/hw7/Homework7TestSuite.xml</suiteXml>
      </properties>
    </profile>

  </profiles>

  <dependencies>
    <dependency>
      <groupId>com.epam.calculator</groupId>
      <artifactId>calculator</artifactId>
      <version>1.0</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/src/main/resources/calculator-1.0.jar</systemPath>
    </dependency>

    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>${testng.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>${assertj.version}</version>
      <scope>test</scope>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-java</artifactId>
      <version>${selenium.version}</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
    <dependency>
      <groupId>io.github.bonigarcia</groupId>
      <artifactId>webdrivermanager</artifactId>
      <version>${webdrivermanager.version}</version>
    </dependency>

    <dependency>
      <groupId>io.qameta.allure</groupId>
      <artifactId>allure-testng</artifactId>
      <version>${allure.version}</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>1.7.32</version>
    </dependency>

    <dependency>
      <groupId>com.epam.jdi</groupId>
      <artifactId>jdi-light-html</artifactId>
      <version>RELEASE</version>
    </dependency>

    <dependency>
      <groupId>com.googlecode.json-simple</groupId>
      <artifactId>json-simple</artifactId>
      <version>${json-simple.version}</version>
    </dependency>

  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>${maven-checkstyle-plugin.version}</version>
        <dependencies>
          <dependency>
            <groupId>com.puppycrawl.tools</groupId>
            <artifactId>checkstyle</artifactId>
            <version>${checkstyle.version}</version>
          </dependency>
        </dependencies>
        <configuration>
          <configLocation>
            <!--  pay attention to use exact url for checkstyle plugin ruleset  -->
            https://raw.githubusercontent.com/DmitryKhodakovsky/epam-training-center-code-checkers-configurations/main/checkstyle/checkstyle.xml
          </configLocation>
          <encoding>${project.build.sourceEncoding}</encoding>
          <includeTestSourceDirectory>true</includeTestSourceDirectory>
          <consoleOutput>true</consoleOutput>
          <failsOnError>true</failsOnError>
          <linkXRef>false</linkXRef>
        </configuration>
        <executions>
          <execution>
            <id>validate</id>
            <phase>validate</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${surefireplugin.versoin}</version>
        <configuration>
          <argLine>
            --illegal-access=permit
            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
          </argLine>
          <testFailureIgnore>true</testFailureIgnore>
          <suiteXmlFiles>
            <suiteXmlFile>${suiteXml}</suiteXmlFile>
          </suiteXmlFiles>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>${aspectj.version}</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>

  <reporting>
    <excludeDefaults>true</excludeDefaults>
    <plugins>
      <plugin>
        <groupId>io.qameta.allure</groupId>
        <artifactId>allure-maven</artifactId>
        <version>2.10.0</version>
        <configuration>
          <reportVersion>${allure.version}</reportVersion>
        </configuration>

      </plugin>
    </plugins>
  </reporting>

</project>